--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dnsd": "0.9.0",
     "redis": "0.8.4",
     "helpersjs" : "0.1.5",
-    "nconf" : "0.6.7"
+    "nconf" : "0.6.7",
+    "native-dns" : "*"
   },
   "devDependencies": {
     "grunt": ">=0.4.1",
