--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redis-dns",
   "private": false,
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "",
   "author": "Jonas Colmsjö <jonas@gizur.com>",
   "description": "Simple DNS server configured using redis. Based on iriscouche's dnsd: https://github.com/iriscouch/dnsd",
@@ -19,7 +19,6 @@
   "dependencies": {
     "dnsd": "0.9.0",
     "redis": "0.8.4",
-    "helpersjs" : "0.1.5",
     "nconf" : "*",
     "native-dns" : "*"
   },
@@ -28,8 +27,7 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "jshint": "2.1.4",
-    "async" : "0.2.9"
+    "jshint": "2.1.4"
   },
   "keywords": [
     "DNS",
