--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "author": "Jonas Colmsjö <jonas@gizur.com>",
     "description": "Simple DNS server configured using redis. Based on iriscouche's dnsd: https://github.com/iriscouch/dnsd",
     "homepage": "https://github.com/colmsjo/redis-dns",
+    "license": "WTFPL",
+    "preferGlobal": false,
     "repository": {
         "type": "git",
         "url": "https://github.com/colmsjo/redis-dns.git"
@@ -12,7 +14,6 @@
     "bugs": {
         "url": "https://github.com/colmsjo/redis-dns/issues"
     },
-    "author": "Jonas Colmsjö <jonas@gizur.com>",
     "main": "index.js",
     "bin": "./index.js",
     "scripts": {
@@ -21,21 +22,18 @@
         "start": "node_modules/.bin/babel-node index.js"
     },
     "dependencies": {
-        "dnsd": "0.9.0",
-        "redis": "0.8.4",
-        "nconf" : "*",
-        "native-dns" : "*",
         "babel-cli": "^6.24.0",
         "babel-core": "^6.24.0",
         "babel-preset-es2015": "^6.24.0",
-        "babel-preset-stage-2": "^6.22.0"
+        "babel-preset-stage-2": "^6.22.0",
+        "dnsd": "0.9.0",
+        "native-dns": "*",
+        "native-dns-packet": "^0.1.1",
+        "nconf": "*",
+        "redis": "0.8.4"
     },
     "devDependencies": {
-        "grunt": ">=0.4.1",
-        "grunt-contrib-jshint": "~0.6.0",
-        "grunt-contrib-nodeunit": "~0.2.0",
-        "grunt-contrib-uglify": "~0.2.2",
-        "jshint": "2.1.4"
+        "xo": "^0.18.1"
     },
     "keywords": [
         "DNS",
@@ -43,8 +41,6 @@
         "dnsd",
         "redis"
     ],
-    "license": "WTFPL",
-    "preferGlobal": false,
     "xo": {
         "space": 4,
         "rules": {
