--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "main": "index.js",
     "bin": "./index.js",
     "scripts": {
-        "test": "xo && exit 0",
-        "dev": "export NODE_ENV='dev' && clear && yarn start",
+        "test": "xo && node_modules/.bin/babel-node node_modules/.bin/nodeunit test.js && exit 0",
+        "dev": "export NODE_ENV='dev' && clear && node_modules/.bin/babel-node index.js",
         "start": "node_modules/.bin/babel-node index.js"
     },
     "dependencies": {
